Project

General

Profile

Actions

Bug #13785

closed

trunk fails on Travis

Bug #13785: trunk fails on Travis

Added by duerst (Martin Dürst) over 8 years ago. Updated over 8 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.5.0dev (2017-08-07 trunk 59526)
[ruby-core:82266]

Description

I noticed that travis-ci (https://travis-ci.org/ruby/ruby/builds) was red after I checked in r59521. I thought about reverting my commit, but realized that travis-ci had been red for trunk for a number of commits before mine. I hope we can get back to green soon.

Updated by nobu (Nobuyoshi Nakada) over 8 years ago Actions #1

  • Status changed from Open to Closed

Applied in changeset trunk|r59527.


dir.c: fix up r59481 for old kernels

  • dir.c (glob_helper): fix up r59481 for old kernels, which
    provide d_type member but just always set DT_UNKNOWN for any
    entries. [ruby-core:82266] [Bug #13785]
Actions

Also available in: PDF Atom